--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"express": "^5.1.0",
 		"express-session": "^1.18.1",
 		"jsonwebtoken": "^9.0.2",
+		"node-cron": "^4.2.1",
 		"nodemailer": "^6.9.15",
 		"passport": "^0.7.0",
 		"passport-google-oauth20": "^2.0.0",
+		"pdfkit": "^0.17.2",
 		"prisma": "^6.18.0",
 		"qrcode": "^1.5.4"
 	},
@@ -19,6 +21,8 @@
 	},
 	"scripts": {
 		"dev": "nodemon server.js",
-		"start": "node server.js"
+		"start": "node server.js",
+		"create-admin": "node scripts/createAdmin.js",
+		"seed": "node prisma/seed.js"
 	}
 }
